<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ WiFiAnalyzer
  ~ Copyright (C) 2017  VREM Software Development <VREMSoftwareDevelopment@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<resources>
    <!-- application start -->
    <string name="app_name" translatable="false">ISK Scanner</string>
    <string name="app_company_name" translatable="false">VREM Software Development</string>
    <string name="app_copyright">Copyright \u00A9 2015 \u002D 2017</string>
    <string name="app_url" translatable="false">https://vremsoftwaredevelopment.github.io/WiFiAnalyzer</string>
    <!-- application end -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- action start -->
    <string name="action_access_points">Punkty dostępowe</string>
    <string name="action_channel_rating">Podsumowanie kanałów</string>
    <string name="action_channel_graph">Channel Graph</string>
    <string name="action_time_graph">Time Graph</string>
    <string name="action_export">Export</string>
    <string name="action_channel_available">Available Channels</string>
    <string name="action_vendors">Vendors</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_pause" translatable="false">Pause</string>
    <string name="action_resume" translatable="false">Resume</string>
    <string name="action_filter" translatable="false">Filter</string>
    <!-- action end -->

    <string name="scanner_message" translatable="false">Scanning...</string>
    <string name="button_ok" translatable="false">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="no_data_msg">Please visit frequently ask questions section on our website.</string>
    <string name="no_data_url" translatable="false">https://vremsoftwaredevelopment.github.io/WiFiAnalyzer/#faq</string>
    <string name="no_data_geo_warning">Some users running Android OS 6+ (Marshmallow) have reported that the location service must be enabled for the application to see WiFi networks. Marshmallow users may need to turn on the location service, even though WiFiAnalyzer does not explicitly require it. This appears to be attributed to a potential issue in Android OS 6+ that requires location service in order to see WiFi networks.</string>
    <string name="wifi_channels_list_url" translatable="false">https://en.wikipedia.org/wiki/List_of_WLAN_channels</string>

    <string name="export_not_available">Export not available</string>

    <string name="channel_rating_best">Najlepsze kanały:</string>
    <string name="channel_rating_best_none">None</string>
    <string name="channel_rating_best_alternative">, try alternative WiFi Band</string>
    <string name="channel_rating_heading_rating">Ocena kanału:</string>
    <string name="channel_rating_heading_number">Numer kanału:</string>
    <string name="channel_rating_heading_count">Ilość pkt. dostępowych:</string>
    <string name="channel_short_name">Kanał:</string>

    <string name="graph_channel_axis_x">WiFi Channels</string>
    <string name="graph_time_axis_x">Scan Count</string>
    <string name="graph_axis_y">Signal Strength (dBm)</string>

    <!-- settings start -->
    <string name="start_menu_title">Start</string>
    <string name="start_menu_summary" translatable="false">%s</string>
    <string name="start_menu_key" translatable="false">start_menu</string>

    <string name="country_code_title">Country</string>
    <string name="country_code_summary" translatable="false">%s</string>
    <string name="country_code_key" translatable="false">country_code</string>

    <string name="wifi_band_key" translatable="false">wifi_band</string>

    <string name="scan_interval_title">Scan Interval</string>
    <string name="scan_interval_summary">%d seconds between each scan</string>
    <string name="scan_interval_key" translatable="false">scan_interval</string>
    <integer name="scan_interval_min" translatable="false">1</integer>
    <integer name="scan_interval_max" translatable="false">30</integer>
    <integer name="scan_interval_default" translatable="false">5</integer>

    <string name="sort_by_title">Sort Access Points By</string>
    <string name="sort_by_summary" translatable="false">%s</string>
    <string name="sort_by_key" translatable="false">sort_by</string>
    <string name="sort_by_default" translatable="false">0</string>

    <string name="group_by_title">Group Access Points By</string>
    <string name="group_by_summary" translatable="false">%s</string>
    <string name="group_by_key" translatable="false">group_by</string>
    <string name="group_by_default" translatable="false">0</string>

    <string name="ap_view_title">Access Point Display</string>
    <string name="ap_view_summary" translatable="false">%s</string>
    <string name="ap_view_key" translatable="false">view</string>
    <string name="ap_view_default" translatable="false">0</string>

    <string name="connection_view_title">Connection Display</string>
    <string name="connection_view_summary" translatable="false">%s</string>
    <string name="connection_view_key" translatable="false">connection</string>
    <string name="connection_view_default" translatable="false">0</string>

    <string name="graph_maximum_y_title">Graph Maximum Signal Strength</string>
    <string name="graph_maximum_y_summary" translatable="false">%s</string>
    <string name="graph_maximum_y_key" translatable="false">graph_maximum_y</string>
    <string name="graph_maximum_y_default" translatable="false">2</string>

    <string name="channel_graph_legend_title">Channel Graph Legend Display</string>
    <string name="channel_graph_legend_summary" translatable="false">%s</string>
    <string name="channel_graph_legend_key" translatable="false">channel_graph_legend</string>
    <string name="channel_graph_legend_default" translatable="false">2</string>

    <string name="time_graph_legend_title">Time Graph Legend Display</string>
    <string name="time_graph_legend_summary" translatable="false">%s</string>
    <string name="time_graph_legend_key" translatable="false">time_graph_legend</string>
    <string name="time_graph_legend_default" translatable="false">0</string>

    <string name="theme_title">Theme</string>
    <string name="theme_summary" translatable="false">%s</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_default" translatable="false">0</string>

    <string name="wifi_off_on_exit_title">WiFi off on Exit</string>
    <string name="wifi_off_on_exit_key" translatable="false">wifi_off_on_exit</string>
    <bool name="wifi_off_on_exit_default" translatable="false">false</bool>

    <string name="language_title">Language</string>
    <string name="language_summary" translatable="false">%s</string>
    <string name="language_key" translatable="false">language</string>
    <!-- settings end -->

    <!-- about start -->
    <string name="about_application_name" translatable="false">WiFiAnalyzer (open-source)</string>
    <string name="about_license_title">License:</string>
    <string name="about_license_name">Licensed under the GPLv3</string>
    <string name="about_license_url" translatable="false">http://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_description_title">Description:</string>
    <string name="about_description_text">Optimize your WiFi network, by checking WiFi network status, signal strength and identifying crowded channels using an open-source WiFiAnalyzer for Android</string>
    <string name="about_libraries_title">Libraries Used:</string>
    <string name="about_library_apache" translatable="false">Apache Commons</string>
    <string name="about_library_apache_url" translatable="false">https://commons.apache.org</string>
    <string name="about_library_graph_view" translatable="false">Graph View</string>
    <string name="about_library_graph_view_url" translatable="false">http://www.android-graphview.org</string>
    <string name="about_library_material" translatable="false">Material Design Icons</string>
    <string name="about_library_material_url" translatable="false">https://design.google.com/icons</string>
    <string name="about_contributor_title">Contributors:</string>
    <string name="about_contributor_list" translatable="false">"Abuzer Rafey, Alex Orchard, Alexei Guevara, Andreas Ziegler, Caren DesBrisay, Dan Light, David Jones, Gina Chaves, Graham Foster, Jean Bourgeois, Kevin Jiang, Lee McCallum, Lukas Winkler, Marco Santinelli, Mateus B. Cassiano, Michael Melo, Michael Pickard, Peter Dave Hello, Silviu Marcu, Vadim Karantayer, Wei McCallum, William Gathoye, Yuriy Timofeev, 'Akira, Dtorner, Genghis, TaiXiong"</string>
    <string name="about_write_review">Write a Review</string>
    <!-- about end -->

    <string name="wifi_band_2ghz" translatable="false">2.4 GHz</string>
    <string name="wifi_band_5ghz" translatable="false">5 GHz</string>

    <!-- security start -->
    <string name="security_none">None</string>
    <string name="security_wps" translatable="false">WPS</string>
    <string name="security_wep" translatable="false">WEP</string>
    <string name="security_wpa" translatable="false">WPA</string>
    <string name="security_wpa2" translatable="false">WPA2</string>
    <!-- security end -->

    <!-- filter start -->
    <string name="filter_title">Filter</string>
    <string name="filter_close">Close</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_ssid_title" translatable="false">SSID</string>
    <string name="filter_ssid_key" translatable="false">filter_ssid</string>
    <string name="filter_ssid_hint" translatable="false">ssid SSID</string>
    <string name="filter_wifi_band_title">WiFi Band</string>
    <string name="filter_wifi_band_key" translatable="false">filter_wifi_band</string>
    <string name="filter_strength_title">Signal Strength</string>
    <string name="filter_strength_key" translatable="false">filter_strength</string>
    <string name="filter_security_title">Security</string>
    <string name="filter_security_key" translatable="false">filter_security</string>
    <!-- filter end -->
</resources>
