<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) ISK Pawel Czarnik Kamil Drag 2017
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/filterSecurity"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:visibility="gone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_security_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filterSecurityNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/security_none"
            android:textColor="@color/connected"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/filterSecurityWPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/security_wps"
            android:textColor="@color/connected"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/filterSecurityWEP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/security_wep"
            android:textColor="@color/connected"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/filterSecurityWPA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/security_wpa"
            android:textColor="@color/connected"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/filterSecurityWPA2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/security_wpa2"
            android:textColor="@color/connected"
            android:textStyle="bold"/>

    </LinearLayout>

    <include layout="@layout/separator_line"/>
</LinearLayout>
