<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) ISK Pawel Czarnik Kamil Drag 2017
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/nodata"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:visibility="gone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data"
        android:textAlignment="center"
        android:textColor="@color/error_color"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/scanner_message"
        android:textColor="@color/success_color"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autoLink="web"
        android:gravity="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/no_data_geo_warning"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autoLink="web"
        android:gravity="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/no_data_msg"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/no_data_url"/>

</LinearLayout>
