<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) ISK Pawel Czarnik Kamil Drag 2017
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/filterWiFiBand"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:visibility="gone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_wifi_band_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filterWifiBand2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wifi_band_2ghz"
            android:textColor="@color/connected"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/filterWifiBand5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wifi_band_5ghz"
            android:textColor="@color/connected"
            android:textStyle="bold"/>

    </LinearLayout>

    <include layout="@layout/separator_line"/>
</LinearLayout>
